%%{init: {
  'theme': 'base',
  'themeVariables': {
    'primaryColor': '#ffffff',
    'primaryBorderColor': '#000000',
    'primaryTextColor': '#000000',
    'secondaryColor': '#ffffff',
    'secondaryBorderColor': '#000000',
    'secondaryTextColor': '#000000',
    'tertiaryColor': '#ffffff',
    'tertiaryBorderColor': '#000000',
    'tertiaryTextColor': '#000000',
    'lineColor': '#000000',
    'textColor': '#000000',
    'mainBkg': '#ffffff',
    'nodeBorder': '#000000',
    'clusterBkg': '#ffffff',
    'clusterBorder': '#000000',
    'edgeLabelBackground': '#ffffff',
    'fontSize': '14px',
    'attributeBackgroundColorOdd': '#ffffff',
    'attributeBackgroundColorEven': '#ffffff'
  },
  'er': { 'entityPadding': 12, 'minEntityWidth': 130, 'useMaxWidth': false }
}}%%
erDiagram
    warehouses ||--o{ alerts : warehouse_id
    product_variants ||--o{ alerts : product_variant_id
    users ||--o{ alerts : resolved_by
    users ||--o{ notifications : user_id
    users ||--o{ audit_logs : user_id
    users ||--o{ attachments : uploaded_by
    users ||--o{ app_settings : updated_by

    users {
        bigint id PK
        string full_name
    }
    warehouses {
        bigint id PK
        string code
    }
    product_variants {
        bigint id PK
        string sku
    }
    alerts {
        bigint id PK
        enum alert_type
        enum severity
        bigint warehouse_id FK
        bigint product_variant_id FK
        enum status
        bigint resolved_by FK
    }
    notifications {
        bigint id PK
        bigint user_id FK
        string type
        string reference_type
        bigint reference_id
        bool is_read
    }
    audit_logs {
        bigint id PK
        bigint user_id FK
        string action
        string module
        string entity_type
        bigint entity_id
        json old_values
        json new_values
    }
    attachments {
        bigint id PK
        string entity_type
        bigint entity_id
        string file_name
        string file_url
        bigint uploaded_by FK
    }
    app_settings {
        bigint id PK
        string setting_key
        json setting_value
        bigint updated_by FK
    }
